# Story-Making-agent-PromptPerfect

./: .gitignore  .replit  DEPLOYMENT.md  README.md  README.vercel.md  app.py  build.sh  gemini_service.py  package.json  pyproject.toml  replit.md  requirements.txt  routes.py  run_app.bat  test_api.py  vercel.json
.local/state/replit/agent/filesystem/: filesystem_state.json
api/: gemini_service.py  index.py
attached_assets/: Pasted-Here-is-a-complete-production-ready-prompt-spec-you-can-drop-into-a-website-or-bot-to-generate-full-1756620177560_1756620177562.txt
frontend/frontend/: index.html
frontend/frontend/src/: App.css  App.jsx
static/css/: style.css
static/js/: script.js
templates/: base.html  index.html
